move github link into blurb, remove unused mdx file, update readme

--- a/src/markdown/blurb.mdx
+++ b/src/markdown/blurb.mdx
@@ -1,1 +1,20 @@
+import { Box, Link } from 'theme-ui'
+
 Created by **[John Polacek](https://johnpolacek.com)**, a web developer from Chicago. **Follow me at [@johnpolacek](https://twitter.com/johnpolacek)**
+
+<Box sx={{ py: 4 }}>
+  <Link
+    sx={{
+      bg: "primary",
+      px: 4,
+      py: 3,
+      color: "white",
+      textDecoration: "none",
+      fontSize: 3,
+      borderRadius: "4px",
+    }}
+    href="https://github.com/johnpolacek/nextjs-mdx-blog-starter"
+  >
+    View on Github
+  </Link>
+</Box>
