move box component into mdx content on about page

--- a/src/mdx/about.mdx
+++ b/src/mdx/about.mdx
@@ -1,3 +1,15 @@
+<Box
+  id="home"
+  sx={{
+    px: [3, 4, 5],
+    maxWidth: "800px",
+    mx: "auto",
+    textAlign: "center",
+  }}
+>
+
 # About
 
 Put your About content here...
+
+</Box>
