fix button alignment on blurb for smallscreen

--- a/src/mdx/blurb.mdx
+++ b/src/mdx/blurb.mdx
@@ -2,13 +2,15 @@ import { Box, Link, Image } from 'theme-ui'
 
 Created by **[John Polacek](https://johnpolacek.com)**, a web developer from Chicago. **Follow me at [@johnpolacek](https://twitter.com/johnpolacek)**
 
-<Box sx={{ py: 4 }}>
+<Box>
   <Link
     sx={{
+      display: "inline-block", 
       bg: "primary",
       px: 4,
       py: 3,
       mx: 3, 
+      my: 3, 
       color: "white",
       textDecoration: "none",
       fontSize: 3,
@@ -20,10 +22,12 @@ Created by **[John Polacek](https://johnpolacek.com)**, a web developer from Chi
   </Link>
   <Link
     sx={{
+      display: "inline-block", 
       bg: "secondary",
       px: 4,
       py: 3,
       mx: 3, 
+      my: 3, 
       color: "white",
       textDecoration: "none",
       fontSize: 3,
