add width and height to download icon in blurb

--- a/src/mdx/blurb.mdx
+++ b/src/mdx/blurb.mdx
@@ -36,7 +36,7 @@ Created by **[John Polacek](https://johnpolacek.com)**, a web developer from Chi
     download
     href="https://github.com/johnpolacek/nextjs-mdx-blog-starter/archive/main.zip"
   >
-    <Image sx={{position:"relative", top:"2px", left: "-8px"}} src="/download.svg" alt="" />Download
+    <Image width="24" height="24" sx={{position:"relative", top:"2px", left: "-8px"}} src="/download.svg" alt="" />Download
   </Link>
   
 </Box>
