update about page

--- a/src/mdx/about.mdx
+++ b/src/mdx/about.mdx
@@ -1,15 +1,17 @@
-<Box
-  id="home"
-  sx={{
-    px: [3, 4, 5],
-    maxWidth: "800px",
-    mx: "auto",
-    textAlign: "center",
-  }}
->
+I created Next.js MDX Blog Starter when I decided to convert my own blog at [johnpolacek.com](http://johnpolacek.com/) to use Next.js and MDX. I've become a big fan of Next.js and pretty much use it for everything new I’m building on the web these days.
 
-# About
+## Next.js
 
-Put your About content here...
+I reach for Next.js because it scales to what I need it to do. It can build a simple static blog like this one, or a SaaS app with parameterized routing, serverless backet, user auth and an integrated API (see my [Hello Next App](https://hellonextapp.com/) project for example).
 
-</Box>
+## MDX
+
+MDX is a powerful tool for authoring content. It gives you everything that authoring your content in markdown does, but with the added superpower of being able to drop in React components at will. For a web developer blog, that’s obviously pretty appealing.
+
+## Theme UI
+
+[Theme UI](https://theme-ui.com/home/) gives you a base set of [UI components](https://theme-ui.com/components) that let me style and layout web components with ease. The [sx prop](https://theme-ui.com/sx-prop) is magic. No thinking about class names, the cascade or how my CSS is going to scale. Write your styles, then get minified, atomic classes and automatically generated [critical CSS](https://web.dev/extract-critical-css/) for your pages. Great for devs, and great for users.
+
+## Vercel
+
+[Vercel](https://vercel.com/) provides streamlined deployment and hosting via [CLI](https://vercel.com/docs/cli#getting-started). They are also the company behind Next.js.
