--- a/src/mdx/about.mdx
+++ b/src/mdx/about.mdx
@@ -2,7 +2,7 @@ I created Next.js MDX Blog Starter when I decided to convert my own blog at [joh
 
 ## Next.js
 
-I reach for Next.js because it scales to what I need it to do. It can build a simple static blog like this one, or a SaaS app with parameterized routing, serverless backet, user auth and an integrated API (see my [Hello Next App](https://hellonextapp.com/) project for example).
+I reach for Next.js because it scales to what I need it to do. It can build a simple static blog like this one, or a SaaS app with parameterized routing, serverless backend, user authentication and an integrated API (see my [Hello Next App](https://hellonextapp.com/) project for example).
 
 ## MDX
 
