add post cover image height and width front matter fields

--- a/src/mdx/posts/hello-world.mdx
+++ b/src/mdx/posts/hello-world.mdx
@@ -3,6 +3,8 @@ title: 'Hello World'
 excerpt: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. At imperdiet dui accumsan sit amet nulla facilities morbi tempus.'
 coverImage: '/img/blog/hello-world.jpg'
 coverImageAlt: 'Example Cover Image'
+coverImageWidth: 960
+coverImageHeight: 480
 date: '2020-03-16T05:35:07.322Z'
 ---
 
