--- a/src/mdx/posts/nextjs-mdx-blog-starter.mdx
+++ b/src/mdx/posts/nextjs-mdx-blog-starter.mdx
@@ -3,6 +3,8 @@ title: The Next.js MDX Blog Starter
 excerpt: Run your blog on [Next.js](https://nextjs.org/) with content authoring in [MDX](https://mdxjs.com/), design theme and styling with [Theme UI](https://theme-ui.com/components), and deploy with [Vercel](https://vercel.com/).
 coverImage: '/img/blog/nextjs.png'
 coverImageAlt: 'Next.js logo'
+coverImageWidth: 868
+coverImageHeight: 249
 date: '2020-08-11T05:35:07.322Z'
 ---
 
